# LocalCloudAgent

./: .aliasrc  .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  VERSION  build.sh  cdk.json  deps.list  docker-compose.yml  notsetup.py  pyproject.toml  requirements-cli.in  requirements-cli.txt  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  setup.py  test.Dockerfile  test.Dockerfile.dockerignore  tox.ini  update.sh
cdk/: app.py  requirements.txt
conf/: agent_config.yml  local_cloud_agent.service
dev/: git_dev.py
sbin/: install.py  install.sh  local_cloud_agent.sh  update.sh
src/: constants.py  fs_util.py  main.py  models.py  network.py  operations.py  updater.py  util.py
src/local_cloud_agent/: __init__.py  agent.py  configuration.py  constants.py  fs_util.py  initialize.py  main.py  models.py  network.py  operations.py  routes.py  updater.py  util.py  versioning.py
src/local_cloud_agent/agent/: agent_info.py  configuration.py  initialize.py  main.py  models.py  post_config.py  util.py  versioning.py
src/local_cloud_agent/agent/operations/: ops.py  post_ops.py  send.py  update.py  util.py
src/local_cloud_agent/cli/: app.py  main.py
src/local_cloud_agent/common/: common_logger.py  configuration.py  constants.py  err_constants.py  git_common.py  systemd.py
src/local_cloud_agent/conf/: local_cloud_agent.service
src/local_cloud_agent/operations/: operations_util.py
tests/: agent_conf.yml  conftest.py  test___init__.py  test_agent.py  test_common.py  test_main.py  test_models.py  test_operations.py  test_updater.py  test_util.py  test_versioning.py
tests/agent/: test_agent_info.py  test_agent_main.py  test_initialize.py  test_models.py  test_post_config.py  test_util.py  test_versioning.py
tests/agent/operations/: test_operations_util.py  test_ops.py  test_oputil.py  test_post_ops.py  test_send.py  test_update.py  test_util.py
tests/cli/: test_app.py  test_cli_main.py
tests/common/: test_common.py  test_configuration.py  test_constants.py  test_git.py  test_git_common.py  test_systemd.py
tests/common_test/: eval_constants.py  mocks.py  test_constants.py  test_fixtures.py  test_mocks.py
tests/docker/: entry.sh  test_startup.service
tests/test_common/: test_fixtures.py
tests/test_data/: update_operation_sqs_msg.json
